// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge danger 1`] = `
<span
  className="css-1x7fm58"
>
  danger
</span>
`;

exports[`Badge default 1`] = `
<span
  className="css-mx4jeh"
>
  default
</span>
`;

exports[`Badge outline 1`] = `
<span
  className="css-12s43p8"
>
  outline
</span>
`;

exports[`Badge primary 1`] = `
<span
  className="css-25ardn"
>
  primary
</span>
`;

exports[`Badge success 1`] = `
<span
  className="css-1xv1zbc"
>
  success
</span>
`;

exports[`Badge warning 1`] = `
<span
  className="css-r5izn1"
>
  warning
</span>
`;
